src/main/java/org/example/exceptions/InvalidInput/InvalidInputException.java
package org.example.exceptions.InvalidInput;

class InvalidInpException extends IllegalArgumentException {
    public InvalidInpException(String s) {
        super(s);
    }
}
